# projetia

./: .gitignore
lle training/: main.py
lle training/lle2/: main2.py
machine learning/: main.ipynb
mdp training/: GridWorldRow.ipynb  frozenlake.ipynb  modified_policy.ipynb  value_iteration.ipynb
projet3/: main.ipynb
projet3/.ipynb_checkpoints/: main-checkpoint.ipynb
projet4/: main.py
projet4-rl/src/: analysis.py
projet4/rl/: __init__.py  env.py  env_mdp.py  qlearning.py  test.py  value_iteration.py  vi.py  visualize.py
projet5/: 20240817170541  20240817171056  main.py  pyproject.toml  run.py  t2.py  test.py  test_main.py
pyagrum tuto/: main.ipynb  main.py  pyproject.toml
rl2/src/: main.py
rl2/src/rl/: env.py
